Altera Estrutura dos Arquivos

--- a/book/struct/00.1_Introducao.md
+++ b/book/struct/00.1_Introducao.md
@@ -11,10 +11,10 @@ Esse Repositorio é um Open Source, respaldado sob a [Licença MIT](../LICENSE),
 Sem mais à adicionar, te desejo uma boa Leitura e Proveito desse Repositorio :stuck_out_tongue_winking_eye:
 
 - Capitulos
-  - [01 - Estrturua e Introdução ao Git e GitHub](01_Estrutura_Git.md)
-  - [02 - Protocolos de Autenticação e Segurança no Git/GitHub](02_Autenticacao_Seguranca.md)
-  - [03 - Trabalhando com Branchs](03_Branches.md)
-  - [04 - Historico (Log) e Reversão de Commits](04_Log_Reversão.md)
-  - [05 - Estruturando Bons Commits](05_Estruturar_Commits.md)
-  - [06 - Contribuições em Repositorios](06_Contribuicoes.md)
+  - [01 - Estrturua e Introdução ao Git e GitHub](../contents/01_Estrutura_Git.md)
+  - [02 - Protocolos de Autenticação e Segurança no Git/GitHub](../contents/02_Autenticacao_Seguranca.md)
+  - [03 - Trabalhando com Branchs](../contents/03_Branches.md)
+  - [04 - Historico (Log) e Reversão de Commits](../contents/04_Log_Reversão.md)
+  - [05 - Estruturando Bons Commits](../contents/05_Estruturar_Commits.md)
+  - [06 - Contribuições em Repositorios](../contents/06_Contribuicoes.md)
   
