Corrige Link para Pagina Inicial

--- a/book/struct/00.2_Finalização.md
+++ b/book/struct/00.2_Finalização.md
@@ -9,4 +9,4 @@ Novamente, Obrigado
 Guilherme Palma
 
 <br/>
-<p align="center" ><a href="../README.md">Pagina Inicial</a></p>
+<p align="center" ><a href="../../README.md">Pagina Inicial</a></p>
